--- a/evnia/client/src/assets/css/style.css
+++ b/evnia/client/src/assets/css/style.css
@@ -77,6 +77,15 @@ a:hover, a:focus {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+.logo
+{
+  display: inline-block;
+  margin-left: auto;
+  margin-right: 2%;
+  margin-top: 2%;
+  max-width: 100px;
+  height: auto;
+} 
 
 img {
   max-width: 100%;
