--- a/evnia/client/src/assets/css/Header.css
+++ b/evnia/client/src/assets/css/Header.css
@@ -1,11 +1,20 @@
+.d-table-cell{
+  padding: 30px 20px;
+}
+
+.d-table{
+  padding: 70px 0 20px;
+}
+
 .header {
-  display: flex;
+  /*display: flex;*/ /* No need for flex display as it's already a table-cell */
   justify-content: center;
   align-items: center;
-  padding: 30px;
+  padding: 30px 0 20px; /* Add top and bottom padding, set left and right padding to 0 */
   position: relative;
   z-index: 1;
 }
+
 
 .header__container { /* New container styles */
   background-color: white;
