--- a/evnia/client/src/assets/css/Header.css
+++ b/evnia/client/src/assets/css/Header.css
@@ -1,54 +1,13 @@
-.header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
-}
-
-.header__logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 100%;
-}
-
 .logo-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  max-width: 100%;
-  flex-wrap: wrap;
+	display: flex;
+	width: 100%;
+  margin-top: 10%;
 }
-
-.logo-container img {
-  height: 100px; /* Change this value to the desired height */
-  width: auto;
-  max-width: 100%;
-  padding: 0 10px;
+.item-logo {
+	width: percentage(1/4);
+	margin: 10px;	
 }
-
-.logo-container .sps-sou-image {
-  margin-left: 20px; /* Add the desired margin left value for this specific image */
-}
-
-@media (max-width: 768px) {
-  .header {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-  }
-
-  .logo-container {
-    flex-direction: row;
-  }
-
-  .logo-container img {
-    height: auto;
-    width: 100%;
-    margin-right: 10px;
-    margin-left: 10px;
-    padding: 0;
-  }
+.image-logo {
+	max-width: 100%;
+	height: auto;
 }
