--- a/evnia/client/src/assets/css/Header.css
+++ b/evnia/client/src/assets/css/Header.css
@@ -1,13 +1,100 @@
+.d-table-cell{
+  padding: 30px 20px;
+}
+
+.d-table{
+  padding: 70px 0 20px;
+}
+
+.header {
+  /*display: flex;*/ /* No need for flex display as it's already a table-cell */
+  justify-content: center;
+  align-items: center;
+  padding: 30px 0 20px; /* Add top and bottom padding, set left and right padding to 0 */
+  position: relative;
+  z-index: 1;
+}
+
+
+.header__container { /* New container styles */
+  background-color: white;
+  padding: 5px; /* Adjust the padding as needed */
+  border-radius: 10px; /* Adjust the border-radius for rounded corners */
+  width: 100%; /* Span the entire width of the screen */
+  height: 100%; /* Span the entire height of the screen */
+  margin: 0 auto; /* Center the container horizontally */
+}
+
+
+.header__logo {
+  /* display: flex; */
+  justify-content: space-between;
+}
+
 .logo-container {
-	display: flex;
-	width: 100%;
-  margin-top: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  max-width: 100%;
+  flex-wrap: wrap;
+  
 }
-.item-logo {
-	width: percentage(1/4);
-	margin: 10px;	
+
+.logo-container img {
+  height: 100px; /* Change this value to the desired height */
+  width: auto;
+  max-width: 100%;
+  padding: 0 10px;
 }
-.image-logo {
-	max-width: 100%;
-	height: auto;
+
+.header__logo img {
+  margin-right: 10px; /* Adjust this value to control the space between logos */
+}
+
+/*.logo-container .sps-sou-image {*/
+/*  !*margin-left: 20px; !* Add the desired margin left value for this specific image *!*!*/
+/*}*/
+
+/* Add this CSS to your existing styles */
+.video-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1; /* Set a lower z-index to ensure it appears behind the header */
+}
+
+.video-background {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .logo-container {
+    flex-direction: row;
+  }
+
+  .header__container {
+    padding: 10px; /* Adjust the padding for mobile devices */
+  }
+
+
+  .logo-container img {
+    height: auto;
+    width: 100%;
+    margin-right: 10px;
+    margin-left: 10px;
+    padding: 0;
+  }
 }
