--- a/evnia/client/src/assets/css/responsive.css
+++ b/evnia/client/src/assets/css/responsive.css
@@ -45,6 +45,9 @@
   }
   .main-banner-content {
     text-align: center;
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+    box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.1);
   }
   .main-banner-content::before {
     display: none;
@@ -87,6 +90,12 @@
     font-size: 30px;
     margin: 0 20px 0 0;
     position: relative;
+  }
+  .event-countdown #timer
+  {
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+    box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.1);
   }
   .event-countdown #timer div:last-child {
     margin-right: 0;
@@ -233,6 +242,9 @@
   }
   .single-box .d-table-cell {
     display: block;
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+    box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.1);
   }
   .single-box .content {
     position: relative;
@@ -839,13 +851,13 @@
   }
 }
 
-@media only screen and (min-width: 423px) and (max-width: 767px) {
+@media only screen and (min-width: 423px) and (max-width: 991px) {
   .main-banner-content .button-box .video-btn {
     margin-top: 0;
   }
 }
 
-@media only screen and (min-width: 576px) and (max-width: 767px) {
+@media only screen and (min-width: 576px) and (max-width: 991px) {
   .schedule-area .tabs li {
     width: 50%;
     display: inline-block;
@@ -922,6 +934,9 @@
   }
   .main-banner-content {
     text-align: center;
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+    box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.1);
   }
   .main-banner-content::before {
     display: none;
@@ -951,6 +966,12 @@
   .event-countdown #timer div {
     margin: 0 25px;
     font-size: 50px;
+  }
+  .event-countdown #timer
+  {
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+    box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.1);
   }
   .event-countdown #timer div span {
     font-size: 13px;
@@ -1028,6 +1049,9 @@
   }
   .single-box .d-table-cell {
     display: block;
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+    box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.1);
   }
   .single-box .content {
     position: relative;
@@ -1549,6 +1573,12 @@
   .slideshow-banner .event-countdown {
     text-align: center;
     bottom: 5px;
+  }
+  .event-countdown #timer
+  {
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+    box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.1);
   }
   .slideshow-banner .event-countdown #timer span {
     font-size: 10px;
