--- a/evnia/client/src/assets/css/style.css
+++ b/evnia/client/src/assets/css/style.css
@@ -1697,7 +1697,7 @@ Speakers CSS
 }
 
 .single-speakers .speakers-content h3 a {
-  color: #0073AE;
+  color: #a5e0ff;
 }
 
 .single-speakers .speakers-content h3 a:hover, .single-speakers .speakers-content h3 a:focus {
