--- a/evnia/client/src/assets/css/style.css
+++ b/evnia/client/src/assets/css/style.css
@@ -2285,7 +2285,7 @@ Schedule CSS
 }
 
 .tab_content .tabs_item .accordion .accordion-item .accordion-title .schedule-info ul li span {
-  color:  #0073AE;
+  color:  #707070;
 }
 
 .tab_content .tabs_item .accordion .accordion-item .accordion-content {
